--- a/examples/index.html
+++ b/examples/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Cryptit Browser Demo</title>
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <!-- Bootstrap 5 CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -15,7 +16,8 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="mb-4">Cryptit Text Encryption / Decryption</h1>
+    <h1 class="mb-1">@mqyxm/cryptit</h1>
+    <h2 class="mb-4">Text Encryption / Decryption Example</h2>
 
     <!-- Configuration -->
     <div class="card mb-4">
@@ -59,7 +61,7 @@
     <div class="row mb-3">
       <div class="col-md-6">
         <label for="inputText" class="form-label">Input Text</label>
-        <textarea id="inputText" class="form-control" rows="6" placeholder="Enter plaintext or Base64 ciphertext"></textarea>
+        <textarea id="inputText" class="form-control" rows="6" placeholder="Enter plaintext or Base64 ciphertext">Your 🔐 input. Enter plaintext or Base64 ciphertex</textarea>
       </div>
       <div class="col-md-6">
         <label for="outputText" class="form-label">Output</label>
