--- a/examples/text-encryption.html
+++ b/examples/text-encryption.html
@@ -9,6 +9,14 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
   >
+  <script>
+  //This needs to be done
+  window.loadArgon2WasmBinary = () =>
+    fetch("/examples/assets/argon2.wasm")
+      .then(r => r.arrayBuffer())
+      .then(buf => new Uint8Array(buf));
+
+  </script>
   <style>
     textarea { font-family: monospace; }
   </style>
