cryptit browser is now copied to `/examples/assets` durin build for hosting on gh pages

--- a/examples/text-decoding.html
+++ b/examples/text-decoding.html
@@ -77,7 +77,7 @@
 
   <!-- Import minified browser bundle -->
   <script type="module">
-    import { Cryptit } from "../dist/browser/cryptit.browser.min.js";
+    import { Cryptit } from "./assets/cryptit.browser.min.js";
     window.Cryptit = Cryptit;
   </script>
 
