--- a/examples/text-encryption.html
+++ b/examples/text-encryption.html
@@ -115,7 +115,8 @@
   </div>
 
   <script type="module">
-    import { createCryptit } from "../dist//browser/cryptit.browser.min.js"; 
+
+    import { createCryptit } from "./assets/cryptit.browser.min.js";
     window.createCryptit = createCryptit; 
                           
   </script>
