--- a/examples/text-decoding.html
+++ b/examples/text-decoding.html
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="demoNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Text Encryption</a>
+          <a class="nav-link" href="text-encryption.html">Text Encryption</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="text-decoding.html">Header/Data Decoding</a>
