--- a/examples/text-encryption.html
+++ b/examples/text-encryption.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Cryptit Browser Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <!-- Bootstrap 5 CSS -->
   <link
