add file encryption / decode / stream examples

--- a/examples/text-decoding.html
+++ b/examples/text-decoding.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cryptit Browser Demo - Header / Data Decoding</title>
+  <title>Cryptit Browser Demo - Encrypted Text Decoding</title>
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <!-- Bootstrap 5 -->
   <link
@@ -36,10 +36,19 @@
     <div class="collapse navbar-collapse" id="demoNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="text-encryption.html">Text Encryption</a>
+          <a class="nav-link" href="text-encryption.html">Text</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="text-decoding.html">Header/Data Decoding</a>
+          <a class="nav-link active" href="text-decoding.html" aria-current="page">Text Decoding</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="file-encryption.html">File</a>
+        </li>
+         <li class="nav-item">
+            <a class="nav-link" href="streaming.html">File (Streaming)</a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link" href="file-decoding.html">File Decoding</a>
         </li>
       </ul>
     </div>
@@ -47,7 +56,7 @@
 </nav>
   <div class="container">
     <h1 class="mb-1">@mqyxm/cryptit</h1>
-    <h2 class="mb-4">Header &amp; Payload Inspection Example</h2>
+    <h2 class="mb-4">Header &amp; Payload Inspection (Text)</h2>
 
     <!-- Input -->
     <div class="row mb-3">
