--- a/examples/text-encryption.html
+++ b/examples/text-encryption.html
@@ -42,10 +42,19 @@
     <div class="collapse navbar-collapse" id="demoNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="text-encryption.html">Text Encryption</a>
+          <a class="nav-link active" aria-current="page" href="text-encryption.html">Text</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="text-decoding.html">Header/Data Decoding</a>
+          <a class="nav-link" href="text-decoding.html">Text Decoding</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file-encryption.html">File</a>
+        </li>
+         <li class="nav-item">
+            <a class="nav-link" href="streaming.html">File (Streaming)</a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link" href="file-decoding.html">File Decoding</a>
         </li>
       </ul>
     </div>
