strengthen stream download on mobile devices, set safari limit for files larger than 500mb, add memory usage notes on `file-encryption.html` page
self-hosted streamsaver, mitm.html and sw.js

--- a/examples/file-decoding.html
+++ b/examples/file-decoding.html
@@ -59,6 +59,7 @@
   <div class="container">
     <h1 class="mb-1">@mqyxm/cryptit</h1>
     <h2 class="mb-4">Header &amp; Payload Inspection (Files)</h2>
+    <p><b>Note:</b> Data decoding for large files can take some time.</p>
 
     <!-- Input: file picker + dropzone -->
     <div class="row g-3 mb-3">
