--- a/examples/file-encryption.html
+++ b/examples/file-encryption.html
@@ -75,6 +75,9 @@
   <div class="container">
     <h1 class="mb-1">@mqyxm/cryptit</h1>
     <h2 class="mb-4">File Encryption / Decryption Example</h2>
+    <p><b>Note:</b> This example implementation processes file encryption and decryption in memory. As a result, handling large files over 50-100MB (especially on mobile devices) may cause crashes or unexpected behavior.
+For large files, please use the <a href="streaming.html"> streaming</a> version and a desktop browser such as Chrome, Firefox, or Edge (iOS / Safari browsers are limited).
+</p>
 
     <!-- Configuration -->
     <div class="card mb-4">
